update README.md and paint_regression_description.pdf

--- a/paint_regression_description.tex
+++ b/paint_regression_description.tex
@@ -94,7 +94,8 @@
 \maketitle
 
 \section{Introduction}
-The goal of my paint regression project is to try to get an understanding of how artists paint, and also to get pretty pictures, by mathematically modeling a simplified view of how artists paint a picture from a reference photo. The idea is that a painting is constructed from a sequence of brush strokes, with each brush stroke being optimal or near optimal to get the painting as close as possible to what the artist wants it to look like. This optimality constraint is motivated by the fact that while computer monitors and printers are not limited in the number of pixels or dots to construct the image, artists are, because they cannot work nearly as fast, and hence, they will try to place brush strokes strategically to maximize the impact.
+The goal of my paint regression project is to try to get the computer to ``paint'' an image, by using a highly simplified model of how an artist paints a picture: this is how one would opt to paint if they wanted to get their painting as close as possible to a reference image with the least amount of effort. The goal of the program is to create a painting that is as close as possible to the source image after a given fixed number of brush strokes. A ``brush stroke'' is a region of pixels in the image, together with a color and an opacity, and applying a brush stroke is coloring in the painting with the color and opacity in the region.
+
 
 \section{Setup}
 We have a source image $I$, represented as an array of pixels with $m$ rows, $n$ columns, and $c$ channels ($c$ will usually be 3 for red, green, and blue). Color intensities are from 0 to 1. So, $I \in \mathcal{I}$, where $\mathcal{I} = [0,1]^{m \times n \times c}$ is the set of all possible images. The program is trying to recreate $I$ by placing brush strokes on a painting  one-by-one. The painting after $t$ brush strokes is denoted $P_t \in \mathcal I$. The painting can start out as anything, but in my program I start the painting as being white to represent a blank canvas, so we can set $P_0$ to be the filled with 1s.
